# auth-service

./: Cargo.toml  README.md  deployment.sh  diesel.toml  docker-compose.yml
migrations/2024-07-08-205526_create_users_table/: up.sql
migrations/2024-09-15-140844_initial/: up.sql
src/: main.rs
src/adapters/postgres/: mod.rs  models.rs  schema.rs
src/adapters/postgres/repositories/: mod.rs  repo_trait.rs  unit_of_work.rs  users.rs
src/adapters/postgres/specifications/: mod.rs
src/dtos/: users.rs
src/services/: users.rs
